[gd_scene load_steps=2 format=3 uid="uid://dv6vkdftgp52i"]

[ext_resource type="Script" path="res://Scripts/BullethellGame/spawner.gd" id="1_liswt"]

[node name="Spawner" type="Node2D"]
position = Vector2(500, 500)
script = ExtResource("1_liswt")

[node name="Sprite2D" type="Sprite2D" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="LiveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="LiveTimer" to="." method="_on_live_timer_timeout"]
